--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
       <div class="right-content">
         <ul>
-          <li><a href="travel_recommendation.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="AboutUS.html">About</a></li>
 
           <li><a href="contactUS.html">Contact</a></li>
