--- a/contactUS.html
+++ b/contactUS.html
@@ -160,9 +160,9 @@
 
       <div class="right-content">
         <ul>
-          <li><a href="travel_recommendation.html">Home</a></li>
-          <li><a href="AboutUs.html">About</a></li>
-          <li><a href="ContactUs.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="AboutUS.html">About</a></li>
+          <li><a href="ContactUS.html">Contact</a></li>
         </ul>
       </div>
     </nav>
