--- a/contactUS.html
+++ b/contactUS.html
@@ -162,7 +162,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="AboutUS.html">About</a></li>
-          <li><a href="ContactUS.html">Contact</a></li>
+          <li><a href="contactUS.html">Contact</a></li>
         </ul>
       </div>
     </nav>
